добавляет неразрывный пробел

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="tel:+380961111111" class="contacts-list__items__link">
                            <svg class="contacts-icon-phone" width="10px" height="16px">
                               <use href="./images/icons.svg/symbol-defs.svg#smartphone"></use>  
-                           </svg>+38&nbsp096&nbsp111&nbsp11&nbsp11</a>
+                           </svg>+38&nbsp;096&nbsp;111&nbsp;11&nbsp;11</a>
                      </li>
                   </ul>
             </div>
@@ -370,7 +370,7 @@
                               26</a></li>
                         <li class="address-section-list__item"><a href="mailto:info@example.com"
                               class="address-section-list__item__link">info@example.com</a></li>
-                        <li class="address-section-list__item"><a href="tel:+380991111111" class="address-section-list__item__link">+38&nbsp099&nbsp111&nbsp11&nbsp11</a>
+                        <li class="address-section-list__item"><a href="tel:+380991111111" class="address-section-list__item__link">+38&nbsp;096&nbsp;111&nbsp;11&nbsp;11</a>
                         </li>
                      </ul>
                   </address>
@@ -415,7 +415,7 @@
                   <section class="emailing-section">
                      <p class="emailing-section__title">Подпишитесь на рассылку</p>
                      <div class="emailing-container">
-                        <label for="email-subscribe" for="email-subscribe"></label>
+                        <label for="email-subscribe"></label>
                         <input type="email" class="emailing-container__filling" name="email-subscribe" placeholder="E-mail"
                            id="email-subscribe" />
                         <button type="submit" class="emailing-submit-button">Подписаться
@@ -513,7 +513,7 @@
                            <use href="./images/icons.svg/symbol-defs.svg#check-mark"></use>
                         </svg>      
                      </span> 
-                     Соглашаюсь с рассылкой и принимаю&nbsp<a href="#" class="modal__check-agreement"> Условия договора</a> 
+                     Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#" class="modal__check-agreement"> Условия договора</a> 
                   </label>
                </div>
       
