добавляет адаптивные стили

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body>
       <!-- Header section -->
       <header class="page-header">
-         <div class="container">
-            <div class="header-block">
+         <div class="container header__container">
       <!-- Navigation section -->
                <nav class="nav-container">
                   <a href="./index.html" class="logo-header logo"><span>Web</span>Studio</a>
@@ -45,7 +44,7 @@
                            </svg>+38&nbsp;096&nbsp;111&nbsp;11&nbsp;11</a>
                      </li>
                   </ul>
-            </div>
+
          </div>
       </header>
 
@@ -358,10 +357,7 @@
       <!-- Footer section -->
       <footer class="page-footer">
          <div class="container">
-            <div class="footer-container">
-               <div>
-      <!-- Logo footer section -->
-                  <a href="./index.html" class="logo-footer logo"><span>Web</span>Studio</a>
+                  <a href="./index.html" class="logo-footer logo"><span>Web</span>Studio</a>              
       <!-- Adress section -->
                   <address>
                      <ul class="address-section-list">
@@ -374,7 +370,7 @@
                         </li>
                      </ul>
                   </address>
-                  </div>
+
       <!-- Subscription section -->
             <div class="subscription-container">
                   <p class="subscription-container__title">Присоединяйтесь</p>
@@ -426,7 +422,6 @@
                      </div>
                   </section>
                </form>
-            </div>
          </div>
       </footer>
 
