--- a/portfolio.html
+++ b/portfolio.html
@@ -18,37 +18,36 @@
 </head>
 <body>
     <!-- Header section -->
-<header class="page-header">
-    <div class="container">
-        <div class="header-block">
-    <!-- Navigation section -->
-            <nav class="nav-container">
-                <a href="./index.html" class="logo-header logo"><span>Web</span>Studio</a>
-                <ul class="site-nav-list">
+    <header class="page-header">
+        <div class="container header__container">
+     <!-- Navigation section -->
+              <nav class="nav-container">
+                 <a href="./index.html" class="logo-header logo"><span>Web</span>Studio</a>
+                 <ul class="site-nav-list">
                     <li class="site-nav-list__item"><a href="./index.html" class="site-nav-list__item__link">Студия</a></li>
                     <li class="site-nav-list__item"><a href="./portfolio.html" class="site-nav-list__item__link current">Портфолио</a></li>
                     <li class="site-nav-list__item"><a href="" class="site-nav-list__item__link">Контакты</a></li>
-                </ul>
-            </nav>
-    <!-- Contacts section -->
-            <ul class="contacts-list ">
-                <li class="contacts-list__items">
-                    <a href="mailto:info@devstudio.com" class="contacts-list__items__link">
-                        <svg class="contacts-icon-mail" width="16px" height="12px">
-                            <use href="./images/icons.svg/symbol-defs.svg#envelope"></use>
-                        </svg>info@devstudio.com</a>
-                </li>
-            
-                <li class="contacts-list__items">
-                    <a href="tel:+380961111111" class="contacts-list__items__link">
-                        <svg class="contacts-icon-phone" width="10px" height="16px">
-                            <use href="./images/icons.svg/symbol-defs.svg#smartphone"></use>
-                        </svg>+380961111111</a>
-                </li>
-            </ul>
+                 </ul>
+              </nav>
+     <!-- Contacts section -->
+                 <ul class="contacts-list ">
+                    <li class="contacts-list__items">
+                       <a href="mailto:info@devstudio.com" class="contacts-list__items__link">
+                          <svg class="contacts-icon-mail" width="16px" height="12px">
+                             <use href="./images/icons.svg/symbol-defs.svg#envelope"></use>
+                          </svg>info@devstudio.com</a>
+                    </li>
+                 
+                    <li class="contacts-list__items">
+                       <a href="tel:+380961111111" class="contacts-list__items__link">
+                          <svg class="contacts-icon-phone" width="10px" height="16px">
+                             <use href="./images/icons.svg/symbol-defs.svg#smartphone"></use>  
+                          </svg>+38&nbsp;096&nbsp;111&nbsp;11&nbsp;11</a>
+                    </li>
+                 </ul>
+
         </div>
-    </div>
-</header>
+     </header>
  
     <!-- Main section -->
     <main>
