--- a/index.html
+++ b/index.html
@@ -568,23 +568,21 @@
             </button>
       
             <ul class="mobile-nav">
-              <li><a href="" class="link">About</a></li>
-              <li><a href="" class="link">Products</a></li>
-              <li><a href="" class="link">Contacts</a></li>
-              <li><a href="" class="link">Career</a></li>
+              <li><a href="./index.html" class="site-nav-list__item__link">Студия</a></li>
+              <li><a href="./portfolio.html" class="site-nav-list__item__link">Портфолио</a></li>
+              <li><a href="" class="site-nav-list__item__link">Контакты</a></li>
             </ul>
             <!-- <div class="mobile-wrap"> -->
             <ul class="mobile-contacts">
-              <li><a href="" class="link">About</a></li>
-              <li><a href="" class="link">Products</a></li>
-              <li><a href="" class="link">Contacts</a></li>
-              <li><a href="" class="link">Career</a></li>
+              <li><a href="tel:+380961111111" class="contacts-list__items__link">+38&nbsp;096&nbsp;111&nbsp;11&nbsp;11</a></li>
+              <li><a href="mailto:info@devstudio.com" class="contacts-list__items__link">info@devstudio.com</a></li>
             </ul>
             <ul class="mobile-socials">
-              <li><a href="" class="link">About</a></li>
-              <li><a href="" class="link">Products</a></li>
-              <li><a href="" class="link">Contacts</a></li>
-              <li><a href="" class="link">Career</a></li>
+              <li><a href="" class="contacts-list__items__link">Instagram</a></li>
+              <li><a href="" class="contacts-list__items__link">Twitter</a></li>
+              <li><a href="" class="contacts-list__items__link">Facebook</a></li>
+              <li><a href="" class="contacts-list__items__link">LinkedIn</a></li>
+
             </ul>
             <!-- </div> -->
           </div>
@@ -600,6 +598,6 @@
 
 
       <script src="./js/modal.js"></script>
-      <script>src="./js/</script/menu.js">
+      <script src="./js/script/menu.js"></script>
    </body>
    </html>
